--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # Excluded items can be processed by explicitly listing the directories or
 # their entries' file path in the `include:` list.
 #
-# exclude:
+exclude:
+  - README.md
 #   - .sass-cache/
 #   - .jekyll-cache/
 #   - gemfiles/
